docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
/* ... */
.paragraph--type--promo-text {
  padding: 20px 40px;
  background: #e5e5e5;
  border: 0;
  position: relative;
  font-weight: 200;
  line-height: 1.4;
  font-size: 21px;
  z-index: 8;
  &:before {
    position: absolute;
    top: 0;
    display: block;
    width: 80%;
    height: 100%;
    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    content: '';
    left: 45%;
    -webkit-transform: skew(30deg);
    -moz-transform: skew(30deg);
    -ms-transform: skew(30deg);
    -o-transform: skew(30deg);
    transform: skew(30deg);
  }
  h2 {
    color: #5e5e5e;
    font-weight: bold;
    font-size: 34px;
    @include cachet();
    text-transform: uppercase;
    @include breakpoint (0 $tablet-start) {
      font-size: 28px;
    }
  }
  p {
    font-size: 21px;
  }
  a {
    font-weight: bold;
  }
  ul {
    padding: 0;
    li {
      position: relative;
      margin: 5px 0;
      font-size: 21px;
      padding-left: 20px;
      list-style: none;
      &:before {
        position: absolute;
        top: 2px;
        left: 0;
        margin-right: 8px;
        color: #bebcbc;
        content: '>';
        font-family: 'YMCA';
      }
      a {
        font-weight: bold;
        @include cachet();
      }
    }
  }
}

.paragraph--type--faq-item {
  margin-top: 10px;
  margin-bottom: 5px;
  background-color: #fff;
  border: 1px solid #a3a4a6;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, .05) 0 0 #000;
  -o-box-shadow: 0 1px 1px rgba(0, 0, 0, .05) 0 0 #000;
  -ms-box-shadow: 0 1px 1px rgba(0, 0, 0, .05) 0 0 #000;
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .05) 0 0 #000;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05) 0 0 #000;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
  .field-question {
    color: #fff;
    background-color: #337ab7;
    border-color: #a3a4a6;
    cursor: pointer;
    font-size: 16px;
    text-transform: uppercase;
    padding: 10px 15px;
    border-bottom: 1px solid transparent;
    font-weight: bold;
    @include cachet();
  }
  .field-answer {
    display: none;
    padding: 15px;
  }
}

.paragraph--type--classes-listing-filters .form-actions {
  float: left;
  @include breakpoint ($tablet) {
    margin-top: 38px;
  }
}

.paragraph--type--simple-content {
  article.embedded-entity {
    margin-bottom: 0;
  }
}

.paragraph-gallery .item__caption {
  right: 30px;
}

.paragraph--type--gallery {
  .landing-content &,
  .landing-footer & {
    .cta-group-wrapper {
      left: 100px;
      @include breakpoint (0 $tablet) {
        margin: 0 -15px;
      }
    }
  }
}

.paragraph--type--grid-columns {
  .field-prgf-grid-clm-description {
    .field-media-image {
      img {
        max-width: 100%;
        max-height: none;
      }
    }
  }
}

.field-prgf-grid-clm-description {
  table {
    max-width: 100%;
  }
}
.paragraph--type--simple-content {
  padding-top: 0;
}
.subprogram-listing-item {
  h2 {
    padding-top: 0;
    margin-top: 0;
  }
}

.paragraph--type--secondary-description-sidebar {
  background: $extra-grey3;
  padding: 10px 0 20px 0;
  color: $darker-grey;
  font-family: $font-family-sans-serif;
  font-weight: 200;
  line-height: 1.4;
  &:before {
    position: absolute;
    top: 0;
    left: 55%;
    display: block;
    width: 80%;
    height: 100%;
    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    background-image: linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
    content: '';
    -webkit-transform: skew(-30deg);
    -moz-transform: skew(-30deg);
    -ms-transform: skew(-30deg);
    transform: skew(-30deg);
  }
  h2 {
    color: $extra-grey6;
    font-weight: bold;
    margin-top: 0;
    text-transform: uppercase;
    font-size: 34px;
    @include cachet();
  }
  a {
    font-weight: bold;
  }
  ul {
    padding: 0;
    li {
      position: relative;
      margin: 5px 0;
      padding-left: 20px;
      list-style: none;
      &:before {
        position: absolute;
        top: 2px;
        left: 0;
        margin-right: 8px;
        color: #bebcbc;
        content: '>';
        font-family: 'YMCA';
      }
      a {
        font-weight: bold;
        font-family: 'Cachet', Helvetica, Arial, sans-serif;
      }
    }
  }
  .left {
    font-size: 18px;
    padding-left: 0;
    padding-right: 0;
    @include breakpoint ($tablet) {
      margin-bottom: 0;
      padding-top: 20px;
      padding-bottom: 20px;
      font-size: 21px;
    }
  }
  .right {
    font-size: 18px;
    padding-left: 0;
    padding-right: 0;
    @include breakpoint ($tablet) {
      margin-bottom: 0;
      padding-top: 20px;
      padding-bottom: 20px;
      font-size: 21px;
    }
  }
  .richtext .schedules:before {
    margin-right: 5px;
    content: 'm';
    vertical-align: bottom;
    text-transform: none;
    font-weight: normal;
    font-family: 'YMCA';
    content: 'c';
  }
  .richtext .membership:before {
    margin-right: 5px;
    content: 'm';
    vertical-align: bottom;
    text-transform: none;
    font-weight: normal;
    font-family: 'YMCA';
  }
}
/* ... */

